# sui-sdks

./: .gitignore  DEEPBOOK_100_COMPLETE.md  DEEPBOOK_COMPARISON.md  DEEPBOOK_COMPLETED.md  DEEPBOOK_COVERAGE_COMPARISON.md  DEEPBOOK_TS_RUST_COMPARISON.md  GO_DEEPBOOK_V3_FINAL_SUMMARY.md  GO_IMPLEMENTATION_PROGRESS.md  GO_SDK_100_COMPLETE.md  GO_SDK_MISSING_FEATURES.md  GO_SUI_100_PERCENT_COMPLETE.md  GO_SUI_COMPLETION_REPORT.md  GO_SUI_MISSING_FEATURES_REPORT.md  KOTLIN_SDK_P0_P1_IMPLEMENTATION.md  P0_COMPLETION_REPORT.md  P1_COMPLETION_REPORT.md  PYTHON_100_PERCENT_COMPLETE.md  README.md  README.zh-CN.md  RUST_SDK_TODO.md  TEST_REORGANIZATION_REPORT.md  TS_VS_DART_COMPARISON.md  TS_VS_GO_DEEPBOOK_COMPARISON.md  TS_VS_GO_SUI_COMPARISON.md  TS_VS_KOTLIN_COMPARISON.md  TS_VS_KOTLIN_DEEPBOOK_COMPARISON.md  TS_VS_PYTHON_COMPARISON.md  deepbook-sdk-comparison-report.md  deepbook-v3-comparison-report.md
py-sdks/: .gitignore  README.md  pyproject.toml
py-sdks/docs/: IMPLEMENTATION_STATUS.md
py-sdks/src/pysdks/: __init__.py
py-sdks/src/pysdks/bcs/: __init__.py  reader.py  uleb.py  writer.py
py-sdks/src/pysdks/deepbook_v3/: __init__.py  client.py  config.py  types.py
py-sdks/src/pysdks/seal/: __init__.py  bcs.py  client.py  decrypt.py  dem.py  encrypt.py  error.py  key_server.py  session_key.py  shamir.py  types.py  utils.py
py-sdks/src/pysdks/sui/: __init__.py  async_client.py  batch.py  client.py  dynamic_fields.py  executor.py  faucet.py  graphql.py  grpc.py  intents.py  jsonrpc.py  multisig.py  pagination.py  plugins.py  query_builder.py  registry.py  transactions.py  utils.py  verify.py
py-sdks/src/pysdks/walrus/: __init__.py  client.py  constants.py  error.py  types.py  utils.py
py-sdks/tests/bcs/: test_reader_writer.py  test_rust_vectors.py  test_uleb.py
py-sdks/tests/deepbook_v3/: test_client.py  test_contracts.py  test_encode.py
py-sdks/tests/seal/: test_dem.py  test_seal_client.py
py-sdks/tests/sui/: test_async_client.py  test_client.py  test_faucet.py  test_graphql.py  test_grpc.py  test_jsonrpc.py  test_multisig.py  test_resolver_async.py  test_transactions.py  test_transactions_async.py  test_verify.py
py-sdks/tests/sui/keypairs/: test_keypairs.py
py-sdks/tests/vectors/: rust_bcs_uleb_vectors.json
py-sdks/tests/walrus/: test_walrus.py
rust-sdks/: .gitignore  Cargo.toml  README.md
rust-sdks/crates/deepbook-v3/: Cargo.toml  DEEPBOOK_MODULES.md
rust-sdks/crates/deepbook-v3/src/: client.rs  config.rs  contracts.rs  encode.rs  lib.rs
rust-sdks/crates/deepbook-v3/tests/: deepbook_client_test.rs  deepbook_contracts_test.rs  deepbook_encode_test.rs  deepbook_margin_state_test.rs
rust-sdks/crates/seal/: Cargo.toml
rust-sdks/crates/seal/src/: bcs.rs  bls12381.rs  client.rs  decrypt.rs  dem.rs  elgamal.rs  encrypt.rs  error.rs  ibe.rs  kdf.rs  key_server.rs  lib.rs  session_key.rs  shamir.rs  types.rs  utils.rs
rust-sdks/crates/seal/tests/: encrypt_decrypt_test.rs  key_server_test.rs
rust-sdks/crates/sui/: Cargo.toml
rust-sdks/crates/sui/src/: _utils_old.rs.bak  bcs.rs  lib.rs
rust-sdks/crates/sui/tests/: bcs_test.rs  crypto_test.rs  faucet_test.rs  graphql_test.rs  grpc_test.rs  jsonrpc_test.rs  multisig_test.rs  utils_test.rs  (+3 more)
rust-sdks/crates/walrus/: Cargo.toml
rust-sdks/src/: crypto.rs  lib.rs
rust-sdks/src/deepbook_v3/: client.rs  config.rs  contracts.rs  encode.rs  mod.rs  types.rs
rust-sdks/src/sui/: client.rs  executor.rs  grpc.rs  jsonrpc.rs  mod.rs  multisig.rs  transactions.rs
rust-sdks/tests/: bcs_test.rs  crypto_test.rs  deepbook_client_test.rs  deepbook_contracts_test.rs  deepbook_encode_test.rs  deepbook_margin_state_test.rs  faucet_test.rs  graphql_test.rs  grpc_test.rs  jsonrpc_test.rs  keypairs_ed25519_test.rs  keypairs_secp256k1_test.rs  keypairs_secp256r1_test.rs  multisig_test.rs  transactions_test.rs  utils_test.rs  verify_test.rs  zklogin_test.rs
(+782 files in other folders)
