[package]
name = "sui-sdks-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unofficial Rust SDK baseline for Sui ecosystem"
repository = "https://github.com/sui-sdks/sui-sdks"

[dependencies]
bcs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
async-graphql = "7"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", package = "fastcrypto" }
rand = "0.8"

[dev-dependencies]
httpmock = "0.7"
