[package]
name = "seal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Seal SDK for Sui"
repository = "https://github.com/sui-sdks/sui-sdks"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["aes"] }
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sui = { path = "../sui" }

[dev-dependencies]
httpmock = "0.7"
