[package]
name = "walrus"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Walrus SDK for Sui"
repository = "https://github.com/sui-sdks/sui-sdks"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
base64 = "0.22"
once_cell = "1"
urlencoding = "2"
sui = { path = "../sui" }
rand = "0.8"

[dev-dependencies]
httpmock = "0.7"
